fix: handle null extJson in SPA routing/menu and update prod redis config

--- a/snowy-web-app/src/main/resources/application-prod.properties
+++ b/snowy-web-app/src/main/resources/application-prod.properties
@@ -6,10 +6,10 @@ spring.datasource.dynamic.datasource.master.driver-class-name=com.p6spy.engine.s
 
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.nologging.NoLoggingImpl
 
-spring.redis.host=kube.gago.top
-spring.redis.port=31053
-spring.redis.password=redis
-spring.redis.database=6
+spring.redis.host=39.102.77.233
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.database=12
 
 gago.bmp.access-key-id=4w1WIj6w8F461xR8Ru0d496f
 gago.bmp.access-key-secret=89q9oND9LI0hy9529W164n49zyn5g5d8
