feat: 保险产品管理

--- a/snowy-web-app/src/main/resources/application-prod.properties
+++ b/snowy-web-app/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 # 本地开发的配置文件参考模板
-spring.datasource.dynamic.datasource.master.url=jdbc:p6spy:postgresql://homestead-dev-all.pgsql.zhangbei.rds.aliyuncs.com:2345/test26_0206?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true&useInformationSchema=true
-spring.datasource.dynamic.datasource.master.username=gago
-spring.datasource.dynamic.datasource.master.password=67yuhjNM#
+spring.datasource.dynamic.datasource.master.url=jdbc:p6spy:postgresql://pgm-8vb5g50kv356g56r0o.pgsql.zhangbei.rds.aliyuncs.com:1921/liudayu_ks?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true&useInformationSchema=true&currentSchema=yzx
+spring.datasource.dynamic.datasource.master.username=liudayu_ks
+spring.datasource.dynamic.datasource.master.password=liudayu**ks**A0227
 spring.datasource.dynamic.datasource.master.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.nologging.NoLoggingImpl
